--- a/News/News.Web/Views/Shared/_Layout.cshtml
+++ b/News/News.Web/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>NewsWebsite</title>
+    <title>Panorama-MD</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700|Playfair+Display:400,700,900" rel="stylesheet">
@@ -33,7 +33,10 @@
         </header>
 
         <main id="main">
-            @RenderBody()
+            <div class="site-wrap">
+
+                @RenderBody()
+            </div>
         </main>
 
         <footer id="footer">
