--- a/News/News.Web/Views/Home/Index.cshtml
+++ b/News/News.Web/Views/Home/Index.cshtml
@@ -1,9 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Index";
 }
-@model List<Article>
+@model List<ArticleViewModel>
 
-<div class="site-wrap">
     <div class="site-mobile-menu">
         <div class="site-mobile-menu-header">
         <div class="site-mobile-menu-close mt-3">
@@ -17,13 +16,13 @@
         <div class="container">
             <div class="row align-items-stretch retro-layout-2">
                     <div class="col-md-4">
-                    <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url('images/img_1.jpg');">
+                    <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url('/images/img_1.jpg');">
                         <div class="text">
                         <h2>@Model[0].Content</h2>
                         <span class="date">July 19, 2019</span>
                         </div>
                     </a>
-                    <a href="single.html" class="h-entry v-height gradient" style="background-image: url('images/img_2.jpg');">
+                    <a href="single.html" class="h-entry v-height gradient" style="background-image: url('/images/img_2.jpg');">
                         <div class="text">
                             <h2>@Model[1].Content</h2>
                         <span class="date">July 19, 2019</span>
@@ -31,7 +30,7 @@
                     </a>
                     </div>
                     <div class="col-md-4">
-                    <a href="single.html" class="h-entry img-5 h-100 gradient" style="background-image: url('images/img_v_1.jpg');">
+                    <a href="single.html" class="h-entry img-5 h-100 gradient" style="background-image: url('/images/img_v_1.jpg');">
                         <div class="text">
                         <div class="post-categories mb-3">
                             <span class="post-category bg-danger">Travel</span>
@@ -43,13 +42,13 @@
                     </a>
                     </div>
                     <div class="col-md-4">
-                    <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url('images/img_3.jpg');">
+                    <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url('/images/img_3.jpg');">
                         <div class="text">
                             <h2>@Model[3].Content</h2>
                         <span class="date">July 19, 2019</span>
                         </div>
                     </a>
-                    <a href="single.html" class="h-entry v-height gradient" style="background-image: url('images/img_4.jpg');">
+                    <a href="single.html" class="h-entry v-height gradient" style="background-image: url('/images/img_4.jpg');">
                         <div class="text">
                             <h2>@Model[4].Content</h2>
                         <span class="date">July 19, 2019</span>
@@ -64,19 +63,19 @@
         <div class="container">
         <div class="row mb-5">
             <div class="col-12">
-            <h2>Recent Posts</h2>
+            <h2>Postări recente</h2>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-4 mb-4">
             <div class="entry2">
-                <a href="single.html"><img src="images/img_1.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="single.html"><img src="~/images/img_1.jpg" alt="Image" class="img-fluid rounded"></a>
                 <div class="excerpt">
                 <span class="post-category text-white bg-secondary mb-3">Politics</span>
 
                 <h2><a href="single.html">The AI magically removes moving objects from videos.</a></h2>
                 <div class="post-meta align-items-center text-left clearfix">
-                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                <figure class="author-figure mb-0 mr-3 float-left"><img src="~/images/person_1.jpg" alt="Image" class="img-fluid"></figure>
                 <span class="d-inline-block mt-1">By <a href="#">Carrol Atkinson</a></span>
                 <span>&nbsp;-&nbsp; July 19, 2019</span>
                 </div>
@@ -88,13 +87,13 @@
             </div>
             <div class="col-lg-4 mb-4">
             <div class="entry2">
-                <a href="single.html"><img src="images/img_2.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="single.html"><img src="~/images/img_2.jpg" alt="Image" class="img-fluid rounded"></a>
                 <div class="excerpt">
                 <span class="post-category text-white bg-success mb-3">Nature</span>
 
                 <h2><a href="single.html">The AI magically removes moving objects from videos.</a></h2>
                 <div class="post-meta align-items-center text-left clearfix">
-                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                <figure class="author-figure mb-0 mr-3 float-left"><img src="~/images/person_1.jpg" alt="Image" class="img-fluid"></figure>
                 <span class="d-inline-block mt-1">By <a href="#">Carrol Atkinson</a></span>
                 <span>&nbsp;-&nbsp; July 19, 2019</span>
                 </div>
@@ -106,13 +105,13 @@
             </div>
             <div class="col-lg-4 mb-4">
             <div class="entry2">
-                <a href="single.html"><img src="images/img_3.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="single.html"><img src="~/images/img_3.jpg" alt="Image" class="img-fluid rounded"></a>
                 <div class="excerpt">
                 <span class="post-category text-white bg-warning mb-3">Travel</span>
 
                 <h2><a href="single.html">The AI magically removes moving objects from videos.</a></h2>
                 <div class="post-meta align-items-center text-left clearfix">
-                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                <figure class="author-figure mb-0 mr-3 float-left"><img src="~/images/person_1.jpg" alt="Image" class="img-fluid"></figure>
                 <span class="d-inline-block mt-1">By <a href="#">Carrol Atkinson</a></span>
                 <span>&nbsp;-&nbsp; July 19, 2019</span>
                 </div>
@@ -126,13 +125,13 @@
 
             <div class="col-lg-4 mb-4">
             <div class="entry2">
-                <a href="single.html"><img src="images/img_1.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="single.html"><img src="~/images/img_1.jpg" alt="Image" class="img-fluid rounded"></a>
                 <div class="excerpt">
                 <span class="post-category text-white bg-secondary mb-3">Politics</span>
 
                 <h2><a href="single.html">The AI magically removes moving objects from videos.</a></h2>
                 <div class="post-meta align-items-center text-left clearfix">
-                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                <figure class="author-figure mb-0 mr-3 float-left"><img src="~/images/person_1.jpg" alt="Image" class="img-fluid"></figure>
                 <span class="d-inline-block mt-1">By <a href="#">Carrol Atkinson</a></span>
                 <span>&nbsp;-&nbsp; July 19, 2019</span>
                 </div>
@@ -144,13 +143,13 @@
             </div>
             <div class="col-lg-4 mb-4">
             <div class="entry2">
-                <a href="single.html"><img src="images/img_2.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="single.html"><img src="~/images/img_2.jpg" alt="Image" class="img-fluid rounded"></a>
                 <div class="excerpt">
                 <span class="post-category text-white bg-success mb-3">Nature</span>
 
                 <h2><a href="single.html">The AI magically removes moving objects from videos.</a></h2>
                 <div class="post-meta align-items-center text-left clearfix">
-                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                <figure class="author-figure mb-0 mr-3 float-left"><img src="~/images/person_1.jpg" alt="Image" class="img-fluid"></figure>
                 <span class="d-inline-block mt-1">By <a href="#">Carrol Atkinson</a></span>
                 <span>&nbsp;-&nbsp; July 19, 2019</span>
                 </div>
@@ -162,13 +161,13 @@
             </div>
             <div class="col-lg-4 mb-4">
             <div class="entry2">
-                <a href="single.html"><img src="images/img_4.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="single.html"><img src="~/images/img_4.jpg" alt="Image" class="img-fluid rounded"></a>
                 <div class="excerpt">
                 <span class="post-category text-white bg-danger mb-3">Sports</span>
 
                 <h2><a href="single.html">The AI magically removes moving objects from videos.</a></h2>
                 <div class="post-meta align-items-center text-left clearfix">
-                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                <figure class="author-figure mb-0 mr-3 float-left"><img src="~/images/person_1.jpg" alt="Image" class="img-fluid"></figure>
                 <span class="d-inline-block mt-1">By <a href="#">Carrol Atkinson</a></span>
                 <span>&nbsp;-&nbsp; July 19, 2019</span>
                 </div>
@@ -182,13 +181,13 @@
 
             <div class="col-lg-4 mb-4">
             <div class="entry2">
-                <a href="single.html"><img src="images/img_1.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="single.html"><img src="~/images/img_1.jpg" alt="Image" class="img-fluid rounded"></a>
                 <div class="excerpt">
                 <span class="post-category text-white bg-success mb-3">Nature</span>
 
                 <h2><a href="single.html">The AI magically removes moving objects from videos.</a></h2>
                 <div class="post-meta align-items-center text-left clearfix">
-                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                <figure class="author-figure mb-0 mr-3 float-left"><img src="~/images/person_1.jpg" alt="Image" class="img-fluid"></figure>
                 <span class="d-inline-block mt-1">By <a href="#">Carrol Atkinson</a></span>
                 <span>&nbsp;-&nbsp; July 19, 2019</span>
                 </div>
@@ -200,14 +199,14 @@
             </div>
             <div class="col-lg-4 mb-4">
             <div class="entry2">
-                <a href="single.html"><img src="images/img_2.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="single.html"><img src="~/images/img_2.jpg" alt="Image" class="img-fluid rounded"></a>
                 <div class="excerpt">
                 <span class="post-category text-white bg-danger mb-3">Sports</span>
                 <span class="post-category text-white bg-secondary mb-3">Tech</span>
 
                 <h2><a href="single.html">The AI magically removes moving objects from videos.</a></h2>
                 <div class="post-meta align-items-center text-left clearfix">
-                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                <figure class="author-figure mb-0 mr-3 float-left"><img src="~/images/person_1.jpg" alt="Image" class="img-fluid"></figure>
                 <span class="d-inline-block mt-1">By <a href="#">Carrol Atkinson</a></span>
                 <span>&nbsp;-&nbsp; July 19, 2019</span>
                 </div>
@@ -218,14 +217,14 @@
             </div>
             <div class="col-lg-4 mb-4">
             <div class="entry2">
-                <a href="single.html"><img src="images/img_4.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="single.html"><img src="~/images/img_4.jpg" alt="Image" class="img-fluid rounded"></a>
                 <div class="excerpt">
                 <span class="post-category text-white bg-danger mb-3">Sports</span>
                 <span class="post-category text-white bg-warning mb-3">Lifestyle</span>
 
                 <h2><a href="single.html">The AI magically removes moving objects from videos.</a></h2>
                 <div class="post-meta align-items-center text-left clearfix">
-                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                <figure class="author-figure mb-0 mr-3 float-left"><img src="~/images/person_1.jpg" alt="Image" class="img-fluid"></figure>
                 <span class="d-inline-block mt-1">By <a href="#">Carrol Atkinson</a></span>
                 <span>&nbsp;-&nbsp; July 19, 2019</span>
                 </div>
@@ -257,7 +256,7 @@
         <div class="row align-items-stretch retro-layout">
           
             <div class="col-md-5 order-md-2">
-            <a href="single.html" class="hentry img-1 h-100 gradient" style="background-image: url('images/img_4.jpg');">
+            <a href="single.html" class="hentry img-1 h-100 gradient" style="background-image: url('/images/img_4.jpg');">
                 <span class="post-category text-white bg-danger">Travel</span>
                 <div class="text">
                 <h2>The 20 Biggest Fintech Companies In America 2019</h2>
@@ -268,7 +267,7 @@
 
             <div class="col-md-7">
             
-            <a href="single.html" class="hentry img-2 v-height mb30 gradient" style="background-image: url('images/img_1.jpg');">
+            <a href="single.html" class="hentry img-2 v-height mb30 gradient" style="background-image: url('/images/img_1.jpg');">
                 <span class="post-category text-white bg-success">Nature</span>
                 <div class="text text-sm">
                 <h2>The 20 Biggest Fintech Companies In America 2019</h2>
@@ -277,14 +276,14 @@
             </a>
             
             <div class="two-col d-block d-md-flex">
-                <a href="single.html" class="hentry v-height img-2 gradient" style="background-image: url('images/img_2.jpg');">
+                <a href="single.html" class="hentry v-height img-2 gradient" style="background-image: url('/images/img_2.jpg');">
                 <span class="post-category text-white bg-primary">Sports</span>
                 <div class="text text-sm">
                     <h2>The 20 Biggest Fintech Companies In America 2019</h2>
                     <span>February 12, 2019</span>
                 </div>
                 </a>
-                <a href="single.html" class="hentry v-height img-2 ml-auto gradient" style="background-image: url('images/img_3.jpg');">
+                <a href="single.html" class="hentry v-height img-2 ml-auto gradient" style="background-image: url('/images/img_3.jpg');">
                 <span class="post-category text-white bg-warning">Lifestyle</span>
                 <div class="text text-sm">
                     <h2>The 20 Biggest Fintech Companies In America 2019</h2>
@@ -316,4 +315,3 @@
         </div>
         </div>
     </div>
-</div>
